After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743422 - valgrind: Conditional jump or move depends on uninitialised value(s)
valgrind: Conditional jump or move depends on uninitialised value(s)
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Printing
3.1.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-01-23 21:18 UTC by Olivier Sessink
Modified: 2015-01-24 21:46 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Olivier Sessink 2015-01-23 21:18:29 UTC
on gtk 3.10.8 / glib 2.40.2 I get this error while going to a print preview and then hitting print in Bluefish:

==23148== Conditional jump or move depends on uninitialised value(s)
==23148==    at 0x4E5E498: round (s_round.c:48)
==23148==    by 0x5A9F92C: gdk_window_get_device_position (gdkwindow.c:4513)
==23148==    by 0x55E7B80: gtk_tooltip_show_tooltip (gtktooltip.c:1303)
==23148==    by 0x55E8024: tooltip_popup_timeout (gtktooltip.c:1420)
==23148==    by 0x5A89EC7: gdk_threads_dispatch (gdk.c:804)
==23148==    by 0x6EA9702: g_timeout_dispatch (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.4002.0)
==23148==    by 0x6EA8CE4: g_main_context_dispatch (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.4002.0)
==23148==    by 0x6EA9047: g_main_context_iterate.isra.24 (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.4002.0)
==23148==    by 0x6EA9309: g_main_loop_run (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.4002.0)
==23148==    by 0x548CA7F: gtk_dialog_run (gtkdialog.c:1075)
==23148==    by 0x5659E12: _gtk_print_operation_platform_backend_run_dialog (gtkprintoperation-unix.c:870)
==23148==    by 0x554795E: gtk_print_operation_run (gtkprintoperation.c:3231)

since this is a tooltip from the gtk print dialog I don't think this error is in Bluefish.
Comment 1 Olivier Sessink 2015-01-23 21:19:22 UTC
this part of the log might be relevant as well:

==23148==  Uninitialised value was created by a stack allocation
==23148==    at 0x5A9F730: gdk_window_get_device_position_double (gdkwindow.c:4451)